实现图片收集并发工作流
- 新增 CodeGenConcurrentWorkflow 并发工作流编排
- 新增 ImageCollectionPlanService 图片收集计划服务
- 新增四种并发图片收集节点：内容图片、插画、架构图、Logo
- 新增 ImageAggregatorNode 图片聚合节点
- 重构 ImageCollectorNode 支持并发收集
- 新增图片收集计划提示词配置
- 更新 WorkflowContext 支持图片收集状态