@@ -21,7 +21,7 @@ class UndrawIllustrationToolTest {
         // 测试正常搜索插画
         List<ImageResource> illustrations = undrawIllustrationTool.searchIllustrations("happy");
         assertNotNull(illustrations);       // 验证返回的插画资源
-        ImageResource firstIllustration = illustrations.get(0);
+        ImageResource firstIllustration = illustrations.getFirst();
         assertEquals(ImageCategoryEnum.ILLUSTRATION, firstIllustration.getCategory());
         assertNotNull(firstIllustration.getDescription());
         assertNotNull(firstIllustration.getUrl());
